@@ -96,6 +96,7 @@ CAMERA_SCAN_INTERVAL = 30
 CAMERA_REGISTER_TIMEOUT = 5
 TIME_FOR_SNAPSHOT = 1
 PRINT_END_TIMEOUT = 11
+KEEPALIVE_INTERVAL = 12
 
 # --- Lcd queue ---
 LCD_QUEUE_SIZE = 30
