@@ -12,6 +12,7 @@
     * Bump the API version so it is the same as the xBuddy reported one
     * Support the new multi-level telemetry data structure
     * Don't send over serial when temperature calibration is running
+    * Periodically send a keepalive gcode to keep the printer in PrusaLink mode
 
 0.7.1rc1 (2023-08-10)
     * Fixed HTTP response status on HEAD request for non-existing files
